// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature toggles test basic apis _changeRemoteFeatureValues 2`] = `
{
  "test/feature_a": {},
  "test/feature_aa": {},
  "test/feature_b": {},
  "test/feature_c": {},
  "test/feature_d": {},
  "test/feature_e": {},
  "test/feature_f": {},
  "test/feature_g": {},
  "test/feature_h": {},
}
`;

exports[`feature toggles test basic apis _changeRemoteFeatureValues 3`] = `
{
  "test/feature_a": {},
  "test/feature_aa": {},
  "test/feature_b": {},
  "test/feature_c": {
    "rootValue": "new_a",
  },
  "test/feature_d": {},
  "test/feature_e": {},
  "test/feature_f": {},
  "test/feature_g": {},
  "test/feature_h": {},
}
`;

exports[`feature toggles test basic apis getFeaturesInfos 1`] = `
{
  "test/feature_a": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "test/feature_aa": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
      "VALIDATIONS": [
        {
          "scopes": [
            "tenant",
            "user",
          ],
        },
      ],
    },
    "fallbackValue": false,
  },
  "test/feature_b": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 1,
  },
  "test/feature_c": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "string",
    },
    "fallbackValue": "best",
  },
  "test/feature_d": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
      "VALIDATIONS": [
        {
          "regex": "^(?:true)$",
        },
      ],
    },
    "fallbackValue": true,
  },
  "test/feature_e": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
      "VALIDATIONS": [
        {
          "scopes": [
            "component",
            "layer",
            "tenant",
          ],
        },
        {
          "regex": "^\\d{1}$",
        },
      ],
    },
    "fallbackValue": 5,
  },
  "test/feature_f": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "string",
      "VALIDATIONS": [
        {
          "regex": "^(?:best|worst)$",
        },
      ],
    },
    "fallbackValue": "best",
  },
  "test/feature_g": {
    "config": {
      "ACTIVE": false,
      "SOURCE": "RUNTIME",
      "TYPE": "string",
    },
    "fallbackValue": "activeTest",
  },
  "test/feature_h": {
    "config": {
      "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
      "SOURCE": "RUNTIME",
      "TYPE": "string",
    },
    "fallbackValue": "appUrlTest",
  },
}
`;

exports[`feature toggles test basic apis getRemoteFeaturesInfos 1`] = `
{
  "legacy-key": {
    "config": {
      "SOURCE": "NONE",
    },
    "rootValue": "legacy-root",
    "scopedValues": {
      "tenant::a": "legacy-scoped-value",
    },
  },
  "test/feature_b": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 1,
    "rootValue": 1,
    "scopedValues": {
      "tenant::a": 10,
    },
  },
}
`;

exports[`feature toggles test basic apis initializeFeatureToggles 1`] = `
{
  "test/feature_a": {
    "SOURCE": "RUNTIME",
    "TYPE": "boolean",
  },
  "test/feature_aa": {
    "SOURCE": "RUNTIME",
    "TYPE": "boolean",
    "VALIDATIONS": [
      {
        "scopes": [
          "tenant",
          "user",
        ],
      },
    ],
    "VALIDATIONS_SCOPES_MAP": {
      "tenant": true,
      "user": true,
    },
  },
  "test/feature_b": {
    "SOURCE": "RUNTIME",
    "TYPE": "number",
  },
  "test/feature_c": {
    "SOURCE": "RUNTIME",
    "TYPE": "string",
  },
  "test/feature_d": {
    "SOURCE": "RUNTIME",
    "TYPE": "boolean",
    "VALIDATIONS": [
      {
        "regex": "^(?:true)$",
      },
    ],
    "VALIDATIONS_REGEX": [
      /\\^\\(\\?:true\\)\\$/,
    ],
  },
  "test/feature_e": {
    "SOURCE": "RUNTIME",
    "TYPE": "number",
    "VALIDATIONS": [
      {
        "scopes": [
          "component",
          "layer",
          "tenant",
        ],
      },
      {
        "regex": "^\\d{1}$",
      },
    ],
    "VALIDATIONS_REGEX": [
      /\\^\\\\d\\{1\\}\\$/,
    ],
    "VALIDATIONS_SCOPES_MAP": {
      "component": true,
      "layer": true,
      "tenant": true,
    },
  },
  "test/feature_f": {
    "SOURCE": "RUNTIME",
    "TYPE": "string",
    "VALIDATIONS": [
      {
        "regex": "^(?:best|worst)$",
      },
    ],
    "VALIDATIONS_REGEX": [
      /\\^\\(\\?:best\\|worst\\)\\$/,
    ],
  },
  "test/feature_g": {
    "ACTIVE": false,
    "SOURCE": "RUNTIME",
    "TYPE": "string",
  },
  "test/feature_h": {
    "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
    "SOURCE": "RUNTIME",
    "TYPE": "string",
  },
}
`;

exports[`feature toggles test basic apis initializeFeatureToggles warns for invalid values 1`] = `
{
  "test/feature_a": {
    "SOURCE": "RUNTIME",
    "TYPE": "boolean",
  },
  "test/feature_b": {
    "SOURCE": "RUNTIME",
    "TYPE": "string",
  },
  "test/feature_c": {
    "SOURCE": "RUNTIME",
    "TYPE": "number",
  },
}
`;
